# Eth-Taipei

./: .gitmodules  .mise.toml  Index.html  README.md  kyc.html  wallet.html
solver/: .env.example  .gitignore  .prettierignore  Cargo.toml  NonceKeeperWallet.ts  README.md  index.ts  logger.ts  package.json  patch-bigint-buffer-warn.ts  tsconfig.json
solver/config/: allowBlockLists.ts  chainMetadata.ts  index.ts  solvers.json  solvers.ts  types.ts
solver/scripts/: solver-add.ts  solver-remove.ts  utils.ts
solver/scripts/templates/: filler.ts  index.ts  listener.ts  types.ts
solver/scripts/templates/config/: allowBlockLists.ts  index.ts  metadata.ts
solver/scripts/templates/rules/: index.ts
solver/solvers/: BaseFiller.ts  BaseListener.ts  SolverManager.ts  index.ts  types.ts  utils.ts
solver/solvers/contracts/: erc20.json
solver/solvers/eco/: filler.ts  index.ts  listener.ts  types.ts  utils.ts
solver/solvers/eco/config/: allowBlockLists.ts  index.ts  metadata.ts
solver/solvers/eco/contracts/: EcoAdapter.json  HyperProver.json  IntentSource.json
solver/solvers/hyperlane7683/: db.ts  filler.ts  listener.ts  types.ts  utils.ts
solver/solvers/hyperlane7683/config/: metadata.ts
solver/solvers/hyperlane7683/contracts/: Hyperlane7683.json
solver/solvers/hyperlane7683/rules/: filterByTokenAndAmount.ts  index.ts  intentNotFilled.ts
solver/solvers/offramp7683/: filler.ts  index.ts  listener.ts  types.ts
solver/solvers/offramp7683/config/: allowBlockLists.ts  index.ts  metadata.ts
solver/src/: main.rs
solver/test/: config.test.ts
(+124 files in other folders)
