[package]
name = "solver"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.13.0", features = ["full"] }
eyre = "0.6.12"
futures-util = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
